# SynaesthetiQ-LED-LIbrary

./: .gitignore  CMakeLists.txt  Colour.hpp  main.c  main.cpp  notes.md  readme.md  synaesthetiq.cpp  synaesthetiq.hpp
.github/workflows/: compile-cpp.yml
src/: CMakeLists.txt  main.cpp
src/SynaesthetiQ/: Colour.hpp  synaesthetiq.hpp
src/ws2811/: ws2811.h
test/: CMakeLists.txt  TestColour.cpp
